2014-05-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (saveRegisters, unsaveRegisters): fixed bug 1928,
	  (genXpush): small optimization
	* src/mcs51/peep.c (termScanAtFunc): fixed return value,
	  (scan4op: ret): fixed callee_saves
	* src/stm8/gen.c: MSVC is not C99 compliant
	* support/regression/tests/callee_saves.c: new, added

2014-04-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient float negation.

2014-04-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc2.cc,
	  src/stm8/gen.c:
	  More flexible register allocation of operands, fixed bug in intra-register assignment.

2014-04-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve loading of literals to long globals.

2014-04-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  Fix overoptimistic stack coalescing estimate, clamp shifts.

2014-04-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  Improve arithmetic right shift.

2014-04-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  Various small fixes and improvements.
	* src/stm8/ralloc.c
	  Prepare for register packing for assignment.

2014-04-21 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/z80-disasm.pl: Disassembler for the z80 family.

2014-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve left shift by literal, preparations for patch #234.
	* device/lib/_mulint.c:
	  Speed up integer multiplication by using casts.

2014-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient clearing of high bytes of x and y, more efficient right shift.
	* src/SDCCpeeph.c:
	  Better immdInRange, patch by Ben Shi.
	* src/stm8/peeph.def:
	  Peepholes to optimize stack adjustment.

2014-04-21 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/pic16fam-h-gen.pl: updated
